WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 53016
[GTK] Crash in some pages containing flash
https://bugs.webkit.org/show_bug.cgi?id=53016
Summary
[GTK] Crash in some pages containing flash
Carlos Garcia Campos
Reported
2011-01-24 08:52:02 PST
The problem is that the flash plugin can produce X errors that the GDK default X error handler handles by aborting the process. It's reproducible with the formula1 website:
http://www.f1.com
Attachments
Patch to fix the crash
(2.39 KB, patch)
2011-01-24 09:00 PST
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2011-01-24 09:00:41 PST
Created
attachment 79930
[details]
Patch to fix the crash
Eric Seidel (no email)
Comment 2
2011-01-24 13:15:13 PST
Adding gtk reviewers.
Xan Lopez
Comment 3
2011-01-24 13:19:18 PST
I went through this with Carlos before, it makes sense to me and seems everyone is doing something that ends up having the same effect. I'll let Martin give another r+, since this change is a bit hairy.
Martin Robinson
Comment 4
2011-01-24 13:24:16 PST
Comment on
attachment 79930
[details]
Patch to fix the crash View in context:
https://bugs.webkit.org/attachment.cgi?id=79930&action=review
Seems very reasonable to me!
> Source/WebCore/plugins/gtk/PluginPackageGtk.cpp:113 > + "This probably reflects a bug in the flash plugin.\n"
Here it should probably either say "in a plugin" or "in the Adobe Flash plugin"
> Source/WebCore/plugins/gtk/PluginPackageGtk.cpp:157 > + if (!g_strcmp0(baseName.get(), "libflashplayer.so")) {
g_str_equal here might be clearer, unless there's a possibility that basename may be null.
> Source/WebCore/plugins/gtk/PluginPackageGtk.cpp:160 > + // custom error handler to show a warning when a X error happenswithout aborting.
"happenswithout" -> happens without
Carlos Garcia Campos
Comment 5
2011-01-25 00:38:15 PST
(In reply to
comment #4
)
> (From update of
attachment 79930
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=79930&action=review
> > Seems very reasonable to me! > > > Source/WebCore/plugins/gtk/PluginPackageGtk.cpp:113 > > + "This probably reflects a bug in the flash plugin.\n" > > Here it should probably either say "in a plugin" or "in the Adobe Flash plugin"
We only do it for flash, so I'll use "in the Adobe Flash plugin" :-)
> > Source/WebCore/plugins/gtk/PluginPackageGtk.cpp:157 > > + if (!g_strcmp0(baseName.get(), "libflashplayer.so")) { > > g_str_equal here might be clearer, unless there's a possibility that basename may be null.
>
> > Source/WebCore/plugins/gtk/PluginPackageGtk.cpp:160 > > + // custom error handler to show a warning when a X error happenswithout aborting. > > "happenswithout" -> happens without
Thanks
Carlos Garcia Campos
Comment 6
2011-01-25 00:44:14 PST
Committed
r76578
: <
http://trac.webkit.org/changeset/76578
>
WebKit Review Bot
Comment 7
2011-01-25 01:38:57 PST
http://trac.webkit.org/changeset/76578
might have broken Leopard Intel Release (Tests)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug