2011-01-25  Carlos Garcia Campos  <cgarcia@igalia.com>

Reviewed by Martin Robinson.

        [GTK] Crash in some pages containing flash
        https://bugs.webkit.org/show_bug.cgi?id=53016

        Flash plugin can produce X errors that are handled by the GDK X
        error handler, which exits the process. Since we don't want to
        crash due to flash bugs, we install a custom error handler to show
        a warning when a X error happens without aborting.

        * plugins/gtk/PluginPackageGtk.cpp:
        (WebCore::webkitgtkXError):
        (WebCore::PluginPackage::load):

Canonical link: https://commits.webkit.org/66808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76578 268f45cc-cd09-0410-ab3c-d52691b4dbfc